fix typos in js and style cells

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <main>
 
-                <div id="#setup-screen" class="setup">
+                <div id="setup-screen" class="setup">
                     <h2>Enter Player Names</h2>
                     <div class="input-group">
                         <input type="text" id="player1-name" placeholder="Player 1 (X)" maxlength="10">
