restyle main container and add gradient

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
 
-        <div class="main-container">
+        <div class="glass-container">
 
             <header>
                 <h1>Tic Tac Toe</h1>
