style the gameboard btns and cells

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <input type="text" id="player1-name" placeholder="Player 1 (X)" maxlength="10">
                         <input type="text" id="player2-name" placeholder="Player 2 (O)" maxlength="10">
                     </div>
-                    <button id="start-btn" class="btn start-btn">Start Game</button>
+                    <button id="start-btn" class="btn primary-btn">Start Game</button>
                 </div>
 
                 <div id="game-screen" class="game-container hidden">
